# ijsoned

./: LICENSE  README.md  ijsoned.py  pyproject.toml
src/ijsoned/: __init__.py  ijsoned.py
