[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ijsoned"
version = "0.1.0"
description = "Interactive json editor"
authors = [{ name = "Michael White", email = "ijsoned@mypalmike.com" }]
urls = { "Homepage" = "https://github.com/mypalmike/ijsoned" }
dependencies = ["jsonpath-rw"]
classifiers = [
    "Operating System :: POSIX",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]

[project.scripts]
ijsoned = "ijsoned:main"
